--- a/html/murat/myfirstwebsite/index.html
+++ b/html/murat/myfirstwebsite/index.html
@@ -16,7 +16,7 @@
 
                 <h2 style="background-color: rgb(216, 192, 192) ">GENEREAL INFORMATION</h2>
                 <div>
-                    <img src="Photos/Profile1.jpg " alt="Murat " width=" 400 px " height=" 200 px" vertical-align: middle>
+                    <img src="Photos/Banner1.jpg " alt="Murat " width=" 400 px " height=" 200 px" vertical-align: middle>
                 </div>
 
             </div>
