--- a/html/cemil/my-son/barlas.html
+++ b/html/cemil/my-son/barlas.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-image: url(https://media0.giphy.com/media/SAIJVbtYwb9zylEPDz/giphy.gif?cid=ecf05e47vjblrpzwq8n4pq7t202olw5yoi2rhcqbd96n92de&rid=giphy.gif&ct=g);
-    background-size: contain; background-repeat: no-repeat;">
+    background-size: contain; background-repeat: round;">
         <div>
         <h1 >BARLAS ALI</h1>
         <div style="display: flex; flex-direction: row;">
@@ -32,6 +32,11 @@
         <p>Update in 2 Monaten am 12.07.2022</p>
         <hr>
         <h1>Example PRE</h1>
+        <pre>
+            Gülcan 
+            <a href="cemil.html">Cemil</a> 
+            BARLAS
+        </pre>
         <pre>
             Cry
             Sleep
