--- a/html/murat/myfirstwebsite/index.html
+++ b/html/murat/myfirstwebsite/index.html
@@ -2,59 +2,186 @@
 
     <head>
 
-        <title>Murat Kücüktepe</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Pokemon</title>
+        <link rel="stylesheet" href="Css/Style_index.css">
+        <link rel="icon" type="image/Pokemon-icon"
+            href="Photos/Pokomon2Favicon.png">
     </head>
 
-    <body style="background-image: url(Photos/Background.jpg); background-size: cover;">
+    <body>
 
+        <div id="Contaner1">
 
+            <div id="Top">
 
-        <div class="parent">
+                <div id="Division1">
 
-            <div class="child ">
+                    <ul id="NavigationBar">
+                        <li id="Caption1"><a href="Pokedex.html" target="_blank" text-decoration="none">Pokedex </a></li>
+                        <li id="Caption2">Regions </li>
+                        <li id="Caption3">Teams </li>
+                        <li id="Caption4">Items</li>
+                        <li id="Caption5">Battle </li>
+                    </ul>
 
-                <h2 style="background-color: rgb(216, 192, 192) ">GENEREAL INFORMATION</h2>
-                <div>
-                    <img src="Photos/Banner1.jpg " alt="Murat " width=" 400 px " height=" 200 px" vertical-align: middle>
+                </div>
+            </div>
+
+            <div id="MiddleTop">
+
+                <div id="Division2">
+
+                    <img src="Photos/Pokemon1.jpg" width=100% height=400px
+                        alt="">
+
                 </div>
 
             </div>
 
-            <div class=" child ">
-                <div style=" background-color: rgb(250, 250, 250); ">
-                    <h1 style="background-color: rgb(216, 192, 192) " "> AUTOBIOGRAPHY</h1>
-                        <p>Murat Kücüktepe was born on 14th January of 1987 in Erzincan, a small city, located in the north-eastern part of Turkey.
-                            <br><br> <b>2001-2005</b> - He went to the Erzincan Anatolian High School.
-                            <br> <b>2005-2009</b> - He studied "Industrial Engineering " at the University of Istanbul.
-                            <br> <b>2012-2014</b> - He studied "Quantitative Econimics, Management and Finance " at the University of Vienna.
-                            <br> <b>2015</b> - He published his first research paper <i>"A Multivehicle Profitable Pickup and Delivery Problem "</i> at the <i>"Operations Research Spectrum "</i>.
-                        </p>
+
+            <div id="MiddleBottom">
+
+                <div id="Division3">
+
+                    <p id="Description">Pokémon, electronic game series from Nintendo that
+                        debuted in Japan in February 1996 as Pokémon Green and
+                        Pokémon Red. The franchise later became wildly popular
+                        in the United States and around the world. The series,
+                        originally produced for the company’s Game Boy line of
+                        handheld consoles, was introduced in 1998 to the United
+                        States with two titles, known to fans as Red and Blue.
+                        In the games, players assume the role of Pokémon
+                        trainers, obtaining cartoon monsters and developing them
+                        to battle other Pokémon. Pokémon became one of the most
+                        successful video game franchises in the world, second
+                        only to Nintendo’s Super Mario Bros.</p>
+
                 </div>
 
             </div>
 
-            <div class="child ">
 
-                <div style="background-color: rgb(250, 250, 250); ">
-                    <h3 style="background-color: rgb(216, 192, 192) ">HOBBIES</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis, turpis nec ultrices congue, quam libero dignissim dui, nec molestie orci massa non erat. Quisque mi odio, euismod vel felis et, lobortis tincidunt purus. Mauris
-                        eu eleifend dui, eu sollicitudin nibh. Donec in erat et lacus vehicula rutrum molestie vitae ex. Nam convallis, quam et convallis condimentum, purus lorem pharetra erat, ut cursus ex nulla et justo. Aenean et porta augue. Fusce
-                        quis consequat nibh, a aliquet turpis. Nunc sodales lectus a lectus gravida vulputate. Donec semper tempor ante, eu finibus risus eleifend in.</p>
+            <div id="Bottom">
+
+                <div id="Division4">
+
+
+                    <h1>HISTORY</h1>
+                    <p id="History">In 1998, Nintendo spent $25 million promoting Pokémon in
+                        the United States in partnership with Hasbro, KFC, and
+                        others.[14] Nintendo initially feared that Pokémon was
+                        too Japanese for Western tastes but Alfred Kahn, then
+                        CEO of 4Kids Entertainment convinced the company
+                        otherwise.[15] The one who spotted Pokemon's potential
+                        in the United States was Kahn's colleague Thomas
+                        Kenney.[16]
+
+                        In November 2005, 4Kids Entertainment, which had managed
+                        the non-game related licensing of Pokémon, announced
+                        that it had agreed not to renew the Pokémon
+                        representation agreement. The Pokémon Company
+                        International oversees all Pokémon licensing outside
+                        Asia.[17] In 2006, the franchise celebrated its tenth
+                        anniversary.[18] In 2016, the Pokémon Company celebrated
+                        Pokémon's 20th anniversary by airing an ad during Super
+                        Bowl 50 in January and re-releasing the first Pokémon
+                        video games 1996 Game Boy games Pokémon Red, Green (only
+                        in Japan), and Blue, and the 1998 Game Boy Color game
+                        Pokémon Yellow for the Nintendo 3DS on February 26,
+                        2016.[19][20] The mobile augmented reality game Pokémon
+                        Go was released in July 2016.[21] The first live-action
+                        film in the franchise, Pokémon Detective Pikachu, based
+                        on the 2018 Nintendo 3DS spin-off game Detective
+                        Pikachu, was released in 2019.[22] The eighth generation
+                        of core series games began with Pokémon Sword and
+                        Shield, released worldwide on the Nintendo Switch on
+                        November 15, 2019.
+
+                        To celebrate its 25th anniversary, the company released
+                        two additional titles for the Nintendo Switch: Pokémon
+                        Brilliant Diamond and Shining Pearl, remakes of the
+                        Nintendo DS Pokémon Diamond and Pearl games, on November
+                        19, 2021 and its "premake" Pokémon Legends: Arceus,
+                        which was subsequently released on January 28,
+                        2022.[23][24]
+
+                        The most recent games in the main series, Pokémon
+                        Scarlet and Violet began the ninth and latest generation
+                        and will be released worldwide for the Nintendo Switch
+                        in late 2022.
+
+                    </div>
+
+
+                    <div id="Division5">
+
+                        <h1>POKEMON UNIVERSE</h1>
+                        <p id="Universe">Pokémon is set in the fictional Pokemon universe.
+                            There are numerous regions that have appeared in the
+                            various media of the Pokémon franchise. There are 8
+                            main series regions set in the main series games:
+                            Kanto, Johto, Hoenn, Sinnoh/Hisui, Unova, Kalos,
+                            Alola, and Galar. Each of the eight generations of
+                            the main series releases focuses on a new region.
+                            Every region consists of several cities and towns
+                            that the player must explore in order to overcome
+                            many waiting challenges, such as Gyms, Contests and
+                            villainous teams. At different locations within each
+                            region, the player can find different types of
+                            Pokémon, as well as helpful items and characters.
+                            Different regions are not accessible from one
+                            another at all within a single game, only with the
+                            exception of Kanto and Johto being linked together
+                            in Pokémon Gold, Silver, Crystal, HeartGold and
+                            SoulSilver versions. There are also regions set in
+                            spinoff games and two islands in the Pokémon anime
+                            (Orange Islands and Decolore Islands), all still set
+                            within the same fictional universe.
+
+                            Each main series region in the Pokémon universe is
+                            based on a real world location. The first 4
+                            introduced regions (Kanto, Johto, Hoenn, and
+                            Sinnoh/Hisui) are based on parts of Japan, with
+                            later regions being based on parts of the United
+                            States (New York City is Unova and Hawaii is Alola),
+                            France (Kalos), the United Kingdom (Galar), and
+                            Spain and Portugal (generation 9 region).[28]</p>
+                    </div>
+
+
+                    <div id="Division6">
+
+                        <h1>GENERATIONS</h1>
+                        <p id="Generations">All of the licensed Pokémon properties overseen by
+                            the Pokémon Company International are divided
+                            roughly by generation. These generations are roughly
+                            chronological divisions by release; every several
+                            years, when a sequel to the 1996 role-playing video
+                            games Pokémon Red and Green is released that
+                            features new Pokémon, characters, and gameplay
+                            concepts, that sequel is considered the start of a
+                            new generation of the franchise. The main Pokémon
+                            video games and their spin-offs, the anime, manga,
+                            and trading card game are all updated with the new
+                            Pokémon properties each time a new generation
+                            begins.[29] Some Pokémon from the newer games appear
+                            in anime episodes or films months, or even years,
+                            before the game they were programmed for came out.
+                            The first generation began in Japan with Pokémon Red
+                            and Green on the Game Boy. As of 2022, there are
+                            nine generations of main series video games. The
+                            most recent games in the main series, Pokémon
+                            Scarlet and Violet began the ninth and latest
+                            generation and will be released worldwide for the
+                            Nintendo Switch in late 2022.[30</p>
+
+                    </div>
+
                 </div>
+
+
             </div>
 
-            <div class="child ">
+        </body>
 
-                <div style="background-color: rgb(250, 250, 250); ">
-                    <h3 style="background-color: rgb(216, 192, 192) ">HOBBIES</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mattis, turpis nec ultrices congue, quam libero dignissim dui, nec molestie orci massa non erat. Quisque mi odio, euismod vel felis et, lobortis tincidunt purus. Mauris
-                        eu eleifend dui, eu sollicitudin nibh. Donec in erat et lacus vehicula rutrum molestie vitae ex. Nam convallis, quam et convallis condimentum, purus lorem pharetra erat, ut cursus ex nulla et justo. Aenean et porta augue. Fusce
-                        quis consequat nibh, a aliquet turpis. Nunc sodales lectus a lectus gravida vulputate. Donec semper tempor ante, eu finibus risus eleifend in.</p>
-                </div>
-            </div>
-
-        </div>
-    </body>
-
-</html>
+    </html>
