My Web Page improved

--- a/html/philipp/myFirstWebSite/hobbies.html
+++ b/html/philipp/myFirstWebSite/hobbies.html
@@ -7,7 +7,56 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
-    my hobbies.....
-</body>
-</html>
+<body class="body bgImage" style="background-image:url(img8.jpg)">
+    <div id="page-container">
+    <div id="content-wrap">
+        <h1>My Hobbies</h1>
+        <h2>Ski fahren</h2>
+            <div>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea 
+            takimata sanctus est Lorem ipsum dolor sit amet.</p><br>
+            <iframe style="display: block; margin-left: auto; margin-right: auto;" width="478" height="269" 
+            src="https://www.youtube.com/embed/5u0D7D5Jcro" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+            </div>
+
+        <h2>Snowboarden</h2>
+            <div>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, 
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea 
+            takimata sanctus est Lorem ipsum dolor sit amet.</p><br>
+            <iframe style="display: block; margin-left: auto; margin-right: auto;" width="478" height="269" 
+            src="https://www.youtube.com/embed/cHSjInARd_0" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <nav>
+                <div>
+                    <img class="logo" src="logo.svg" alt="logo">
+                </div> 
+                <div>
+                    <a style="color: black; text-decoration: none;" href="index.html">
+                    about</a></div>
+                <div>
+                    <a style="color: black; text-decoration: none;" href="hobbies.html">
+                    hobbies</a></div>
+                <div>
+                    <a style="color: black; text-decoration: none;" target="_blank" href="https://www.digitalcampusvorarlberg.at/?utm_source=google&utm_medium=cpc&utm_campaign=digital-campus&utm_term=digital%20campus&utm_campaign=%7BIN%7D+%5Ba:DCV%5D%5Bl:AT/CH/LI_DE%5D%5Bn:GSN%5D%5Bc:Digital+Campus%5D&utm_source=adwords&utm_medium=ppc&hsa_acc=6496614893&hsa_cam=13982640474&hsa_grp=124558309909&hsa_ad=535111290674&hsa_src=g&hsa_tgt=kwd-383752601177&hsa_kw=digital%20campus&hsa_mt=b&hsa_net=adwords&hsa_ver=3&gclid=EAIaIQobChMI0Yjzg9n19wIVmJiyCh0lxQSIEAAYASAAEgInZfD_BwE">
+                    campus</a></div>  
+            </nav>
+    </div>     
+        <div id="footer">
+            <p style="text-align:center; font-size: 13px;">&copy; 2022 by Philipp. All rights reserved.</p>
+        </div>
+    </div>
+   </body>
+</htmL>
