--- a/html/sergej/mywebsite/about.html
+++ b/html/sergej/mywebsite/about.html
@@ -18,7 +18,7 @@
              background-attachment: fixed;
              background-position: right; 
              background-size: 25% 75%;">
-    <div class="div_backgrndimg"></div>
+    <div class="top_backgrndimg"></div>
     <h1 class="textfonts textcenter background">This is me!</h1>
     <p class="textcenter"><span class="material-symbols-outlined" style="padding-bottom: 830px;"><a href="index.html">home</a></span></p>
     <div class="background textcenter paddingdown" >Copyright 1995 ;)</div>
