--- a/html/cemil/Example/dsi.html
+++ b/html/cemil/Example/dsi.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dincer Smart Immobilien</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,200" />
     <link rel="stylesheet" href="dsi.css">
 <style>
     .message-bar{ 
@@ -64,6 +65,11 @@ ul > li{
 .menuItem:hover {
     background-color: hsl(197, 96%, 41%);
     border-radius: 999px;
+}
+.material-symbols-outlined{
+    display: grid;
+   justify-content: center;
+   align-content: center;
 }
     
 
@@ -146,8 +152,10 @@ ul > li{
     }
     </script>
 
-    <div>
-        <h1>Wir suchen 1,2 und 3 Zimmer Wohnungen zum Kaufen, eine schnelle Abwicklung wird garantiert!</h1>
+    <div  class="centerContent">
+        
+        <strong>Wir suchen 1,2 und 3 Zimmer Wohnungen zum Kaufen, eine schnelle Abwicklung wird garantiert!</strong>
+        <span class="material-symbols-outlined">handshake</span>
     </div>
 <!-- <div>
     <ul>
