--- a/html/murat/myfirstwebsite/index.html
+++ b/html/murat/myfirstwebsite/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="Css/Style_index.css">
         <link rel="icon" type="image/Pokemon-icon"
             href="Photos/Pokomon2Favicon.png">
+
+        <script src="JavaScript/index.js"></script>
     </head>
 
     <body>
@@ -17,7 +19,8 @@
                 <div id="Division1">
 
                     <ul id="NavigationBar">
-                        <li id="Caption1"><a href="Pokedex.html" target="_blank" text-decoration="none">Pokedex </a></li>
+                        <li id="Caption1"><a href="Pokedex.html" target="_blank"
+                                text-decoration="none">Pokedex </a></li>
                         <li id="Caption2">Regions </li>
                         <li id="Caption3">Teams </li>
                         <li id="Caption4">Items</li>
@@ -31,9 +34,12 @@
 
                 <div id="Division2">
 
-                    <img src="Photos/Pokemon1.jpg" width=100% height=400px
-                        alt="">
+                    <img id="Banner" src="Photos/Pokemon1.jpg" width=100%
+                        height=400px
+                        alt="Banner">
 
+                    <button id="ChangeBannerButton"
+                        onclick="changeButtonClick()">Change Banner</button>
                 </div>
 
             </div>
@@ -43,7 +49,8 @@
 
                 <div id="Division3">
 
-                    <p id="Description">Pokémon, electronic game series from Nintendo that
+                    <p id="Description">Pokémon, electronic game series from
+                        Nintendo that
                         debuted in Japan in February 1996 as Pokémon Green and
                         Pokémon Red. The franchise later became wildly popular
                         in the United States and around the world. The series,
@@ -67,7 +74,8 @@
 
 
                     <h1>HISTORY</h1>
-                    <p id="History">In 1998, Nintendo spent $25 million promoting Pokémon in
+                    <p id="History">In 1998, Nintendo spent $25 million
+                        promoting Pokémon in
                         the United States in partnership with Hasbro, KFC, and
                         others.[14] Nintendo initially feared that Pokémon was
                         too Japanese for Western tastes but Alfred Kahn, then
@@ -76,26 +84,7 @@
                         in the United States was Kahn's colleague Thomas
                         Kenney.[16]
 
-                        In November 2005, 4Kids Entertainment, which had managed
-                        the non-game related licensing of Pokémon, announced
-                        that it had agreed not to renew the Pokémon
-                        representation agreement. The Pokémon Company
-                        International oversees all Pokémon licensing outside
-                        Asia.[17] In 2006, the franchise celebrated its tenth
-                        anniversary.[18] In 2016, the Pokémon Company celebrated
-                        Pokémon's 20th anniversary by airing an ad during Super
-                        Bowl 50 in January and re-releasing the first Pokémon
-                        video games 1996 Game Boy games Pokémon Red, Green (only
-                        in Japan), and Blue, and the 1998 Game Boy Color game
-                        Pokémon Yellow for the Nintendo 3DS on February 26,
-                        2016.[19][20] The mobile augmented reality game Pokémon
-                        Go was released in July 2016.[21] The first live-action
-                        film in the franchise, Pokémon Detective Pikachu, based
-                        on the 2018 Nintendo 3DS spin-off game Detective
-                        Pikachu, was released in 2019.[22] The eighth generation
-                        of core series games began with Pokémon Sword and
-                        Shield, released worldwide on the Nintendo Switch on
-                        November 15, 2019.
+
 
                         To celebrate its 25th anniversary, the company released
                         two additional titles for the Nintendo Switch: Pokémon
@@ -116,7 +105,8 @@
                     <div id="Division5">
 
                         <h1>POKEMON UNIVERSE</h1>
-                        <p id="Universe">Pokémon is set in the fictional Pokemon universe.
+                        <p id="Universe">Pokémon is set in the fictional Pokemon
+                            universe.
                             There are numerous regions that have appeared in the
                             various media of the Pokémon franchise. There are 8
                             main series regions set in the main series games:
@@ -152,7 +142,8 @@
                     <div id="Division6">
 
                         <h1>GENERATIONS</h1>
-                        <p id="Generations">All of the licensed Pokémon properties overseen by
+                        <p id="Generations">All of the licensed Pokémon
+                            properties overseen by
                             the Pokémon Company International are divided
                             roughly by generation. These generations are roughly
                             chronological divisions by release; every several
