--- a/html/zah/NewWeb/newIndex.html
+++ b/html/zah/NewWeb/newIndex.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="class2.css">
 </head>
 <body>
+
+    
+
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum imperdiet nibh, vel placerat nisl interdum nec. Donec volutpat hendrerit hendrerit</p>
     
 </body>
