added drag drop

--- a/html/sergej/todolist/index.html
+++ b/html/sergej/todolist/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <style>
-        
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To Do List</title>
+  <link rel="stylesheet" href="stylesheet.css">
+  <style>
     .container {
       display: block;
       position: relative;
@@ -20,45 +19,49 @@
     }
 
     .container input {
-     display: none
+      display: none
     }
 
     .checkmark::before {
-     content: "";
-     height: 25px;
-     width: 25px;
-     background-color: #eee;
-     position: absolute;
-     left:0;
-     top:0;
-     border-radius: 50%;
+      content: "";
+      height: 25px;
+      width: 25px;
+      background-color: #eee;
+      position: absolute;
+      left: 0;
+      top: 0;
+      border-radius: 50%;
+    }
+
+    .checkmark.dragging {
+      opacity: .5;
     }
 
     .container:hover input~.checkmark::before {
-     background-color: #ccc;
+      background-color: #ccc;
     }
 
 
     .container input:checked~.checkmark::before {
-     background-color: #050607;
+      background-color: #050607;
     }
 
 
     .container input:checked~.checkmark:after {
-     display: block;
-     left: 9px;
-     top: 5px;
-     width: 5px;
-     height: 10px;
-     border: solid white;
-     border-width: 0 3px 3px 0;
-     transform: rotate(45deg);
-     content: "";
-     position: absolute;
+      display: block;
+      left: 9px;
+      top: 5px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      transform: rotate(45deg);
+      content: "";
+      position: absolute;
     }
 
     .container input:checked~.checkmark {
-     text-decoration: line-through
+      text-decoration: line-through
     }
 
     .containerEntry {
@@ -69,66 +72,139 @@
       font-size: 24px;
       margin-top: 10%;
       color: rgb(24, 15, 201);
-      
+
     }
 
     .checkmarkEntry::before {
-     content: "";
-     height: 25px;
-     width: 25px;
-     background-color: rgb(24, 15, 201);
-     position: absolute;
-     left:0;
-     top:0;
-     border-radius: 50%;
-
-    }
-    .containerEntry:hover {
-     background-color: aqua;
-    }
-
-    .todolist{
-        position: relative;
-        margin-bottom: 25%;
+      content: "";
+      height: 25px;
+      width: 25px;
+      background-color: rgb(24, 15, 201);
+      position: absolute;
+      left: 0;
+      top: 0;
+      border-radius: 50%;
 
     }
 
-    .placeholder{
-        flex-grow: 100;
-        background-color: white;
-    }
-    .gridcontainer{
-      display: grid;
-      grid-template-columns: 10% 80% 10%;
+    .todolist {
+      position: relative;
+      margin-bottom: 25%;
+
     }
 
-</style>
-        <body>
-          <div class="gridcontainer">
-            <div class="placeholder"></div>
-        <div class="todolist">
-        <h1 style="margin-bottom: 50px;">Todo List</h1>
-        <label class="container">
-          <input type="checkbox">
-          <span class="checkmark">Milch 🥛</span>
-        </label>
-        <label class="container">
-          <input type="checkbox">
-          <span class="checkmark">Kuchen 🍰</span>
-        </label>
-        <label class="container">
-          <input type="checkbox">
-          <span class="checkmark">Schokolade 🍫</span>
-        </label>
-        <label class="container">
-          <input type="checkbox">
-          <span class="checkmark">Kaffee ☕</span>
-        </label>
-        <label class="containerEntry">
-          <span class="checkmarkEntry">Neuer Eintrag</span>
-        </label>
-         </div>
-        </div>
-        <div class="placeholder"></div>
-        </body>
+    .placeholder {
+      flex-grow: 100;
+      background-color: white;
+    }
+
+    .gridcontainer {
+      width: 80%;
+      padding-left: 10%;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="gridcontainer">
+    <h1 style="margin-bottom: 50px;">Todo List</h1>
+
+    <div id="mainList" class="todolist">
+      <label class="container" draggable="true">
+        <input type="checkbox">
+        <span class="checkmark">Milch 🥛</span>
+      </label>
+      <label class="container" draggable="true">
+        <input type="checkbox">
+        <span class="checkmark">Kuchen 🍰</span>
+      </label>
+      <label class="container" draggable="true">
+        <input type="checkbox">
+        <span class="checkmark">Schokolade 🍫</span>
+      </label>
+      <label class="container" draggable="true">
+        <input type="checkbox">
+        <span class="checkmark">Kaffee ☕</span>
+      </label>
+    </div>
+    <div>
+      <label class="containerEntry">
+        <span class="checkmarkEntry" onpointerup="addEntry()"></span>Neuer
+        Eintrag <input id="textEntry" type="text" placeholder="Add new ToDo item">
+      </label>
+    </div>
+  </div>
+
+
+  <script>
+
+    const draggables = document.querySelectorAll(".container")
+    const containers = document.querySelectorAll(".todolist")
+
+    function setDragListener(element) {
+      element.addEventListener("dragstart", () => { element.classList.add("dragging") })
+      element.addEventListener("dragend", () => { element.classList.remove("dragging") })
+    }
+
+    draggables.forEach(container => {
+      setDragListener(container)
+    })
+
+    containers.forEach(container => {
+      container.addEventListener("dragover", e => {
+        e.preventDefault()
+        const afterElement = getDragAfterElement(container, e.clientY)
+        const draggable = document.querySelector(".dragging")
+        if (afterElement == null) {
+          container.appendChild(draggable)
+        } else {
+          container.insertBefore(draggable, afterElement)
+        }
+      })
+    })
+
+
+    function getDragAfterElement(container, y) {
+      const draggableElements = [...container.querySelectorAll(".container:not(.dragging)")]
+
+      return draggableElements.reduce((closest, child) => {
+        const box = child.getBoundingClientRect()
+        const offset = y - box.top - box.height / 2
+        if (offset < 0 && offset > closest.offset) {
+          return { offset: offset, element: child }
+        } else {
+          return closest
+        }
+      }, { offset: Number.NEGATIVE_INFINITY }).element
+    }
+
+
+
+    function addEntry() {
+      let entry = document.getElementById("textEntry").value
+      document.getElementById("textEntry").value = ""
+      let parent = document.getElementById("mainList")
+      let child = document.createElement("label")
+      child.className = "container"
+      child.draggable = true
+      let subchild = document.createElement("input")
+      subchild.type = "checkbox"
+      let subchild2 = document.createElement("span")
+      subchild2.className = "checkmark"
+      subchild2.innerHTML = entry
+      parent.appendChild(child)
+      child.appendChild(subchild)
+      child.appendChild(subchild2)
+
+      setDragListener(child)
+    }
+
+
+
+
+
+
+  </script>
+</body>
+
 </html>
