--- a/html/sergej/dasboard/index.html
+++ b/html/sergej/dasboard/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,42 +8,47 @@
     <link rel="stylesheet" href="style.css">
     <title>Dashboard</title>
 </head>
+
 <body style="background-color: rgb(32, 9, 84);">
     <div class="grid-col">
         <div class="grid-item">
-        <div class="grid-row">
-            <div class="grid-item">
-                <div class="grid-col-even">
-                    <div class="grid-item">
-                        <div class="grid-item-chart-row">
-                            <div class="grid-item">
-                                <div class="grid-item-chart-col">
-                                    <div class="grid-item">
-                                        <div class="grid-item-vertical-axis">Session 100k 200k 0</div><!-- Vertical list Y Axis -->
-                                    </div> 
-                                    <div class="grid-item"><svg height="200" width="500">
-                                        <polyline points="25 60,40 80,120 120,140 200,180 20,190 70,200 30,215,90,250,120,290 70,310,20,350 160,380 200 ,400,150 420,160 450 70 480 110,490 15 495,80 500,55 600 88"
-                                        style="fill:none;stroke:rgb(11, 160, 186);stroke-width:3" />
-                                      </svg></div>  <!-- Polygon Chart-->
+            <div class="grid-row">
+                <div class="grid-item">
+                    <div class="grid-col-even">
+                        <div class="grid-item">
+                            <div class="grid-item-chart-row">
+                                <div class="grid-item">
+                                    <div class="grid-item-chart-col">
+                                        <div class="grid-item">
+                                            <div class="grid-item-vertical-axis">Session 100k 200k 0</div>
+                                            <!-- Vertical list Y Axis -->
+                                        </div>
+                                        <div class="grid-item"><svg height="200" width="500">
+                                                <polyline
+                                                    points="25 60,40 80,120 120,140 200,180 20,190 70,200 30,215,90,250,120,290 70,310,20,350 160,380 200 ,400,150 420,160 450 70 480 110,490 15 495,80 500,55 600 88"
+                                                    style="fill:none;stroke:rgb(11, 160, 186);stroke-width:3" />
+                                            </svg></div> <!-- Polygon Chart-->
+                                    </div>
                                 </div>
+                                <div class="grid-item" style="word-spacing:25px;">Jan March May Jul Sept</div>
+                                <!-- Horizontal list X axis-->
                             </div>
-                            <div class="grid-item" style="word-spacing:25px;">Jan March May Jul Sept</div> <!-- Horizontal list X axis-->
                         </div>
-                    </div>
-                    <div class="grid-item">
-                        <div class=grid-item-chart-row>
-                            <div class="grid-item">
-                                <div class="grid-item-chart-col">
-                                    <div class="grid-item">
-                                        <div class="grid-item-vertical-axis">Signups 1.000 500 .0</div>
-                                    </div>
-                                    <div class="grid-item"><svg height="200" width="500">
-                                        <polyline points="25 60,40 80,120 120,140 200,180 20,190 70,200 30,215,90,250,120,290 70,310,20,350 160,380 200 ,400,150 420,160 450 70 480 110,490 15 495,80 500,55 600 88"
-                                        style="fill:none;stroke:rgb(154, 186, 11);stroke-width:3" />
-                                      </svg></div>  <!-- Polygon Chart-->
+                        <div class="grid-item">
+                            <div class=grid-item-chart-row>
+                                <div class="grid-item">
+                                    <div class="grid-item-chart-col">
+                                        <div class="grid-item">
+                                            <div class="grid-item-vertical-axis">Signups 1.000 500 .0</div>
+                                        </div>
+                                        <div class="grid-item"><svg height="200" width="500">
+                                                <polyline
+                                                    points="25 60,40 80,120 120,140 200,180 20,190 70,200 30,215,90,250,120,290 70,310,20,350 160,380 200 ,400,150 420,160 450 70 480 110,490 15 495,80 500,55 600 88"
+                                                    style="fill:none;stroke:rgb(154, 186, 11);stroke-width:3" />
+                                            </svg></div> <!-- Polygon Chart-->
                                     </div>
                                 </div>
-                                <div class="grid-item"style="word-spacing:25px;"> Jan March May Jul Sept</div>
+                                <div class="grid-item" style="word-spacing:25px;"> Jan March May Jul Sept</div>
                             </div>
                         </div>
                     </div>
@@ -50,7 +56,7 @@
             </div>
             <div class="grid-item">
                 <div class="grid-col-odd">
-                    <div class="grid-item">R2C1</div> 
+                    <div class="grid-item">R2C1</div>
                     <div class="grid-item">R2C2</div>
                     <div class="grid-item">R2C3</div>
                 </div>
@@ -71,8 +77,6 @@
             </div>
         </div>
     </div>
-    </div>
-
-    
 </body>
+
 </html>
